# mnemo-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  qodana.yaml  requirements.txt
.github/workflows/: ci.yml  qodana_code_quality.yml
alembic/: env.py
alembic/versions/: 2540a539e2b1_merge_heads.py  3b9f1c2a5d6_add_api_key_key_lookup.py  4c8d2b1e3f7_alter_api_keys_id_length.py  6ee6cc79f23d_merge_heads.py  6f9b2c1a7d4e_add_decks_flashcards_idempotency.py  7ada38a5dbc7_merge_feature_login_reg_auth_into_main.py  7b2a1d4e9f0c_seed_dummy_users_decks.py  8f3c2d1e4b7a_add_import_jobs.py  9a1b2c3d4e5f_add_api_keys_user_cascade.py  a1b2c3d4e6f7_add_sessions_and_session_cards.py  a2b3c4d5e6f7_add_display_name_unique.py  a9b8c7d6e5f4_add_user_admin_consents_table.py  b2198de62bab_merge_heads_2540a539e2b1_copy_validated_.py  b3c4d5e6f7a8_add_session_card_position.py  b5c6d7e8f9a0_add_normalized_display_name.py  c0a1b2c3d4e5_add_user_auth_fields.py  c3f4a5b6d7e8_add_email_to_users.py  d1e2f3a4b5c6_add_password_reset_tokens.py  d1e2f3a4b5c6_add_study_plans.py  d4f5a6b7c8e9_add_study_plans.py  d_copy_validated_emails_to_users.py  e163c3063cf1_phase_1_add_user_and_apikey_tables.py  e2f3a4b5c6d7_add_request_id_to_password_reset_tokens.py  f2c1b3a4d5e6_merge_heads.py  ff1e2d3c4b5a_merge_heads.py
apiApp/: SPEC.md  mnemo_ux_design.html
apiapp/: README.md  pubspec.yaml
apiapp/lib/: main.dart
apiapp/linux/: CMakeLists.txt
apiapp/web/: index.html
apiapp/windows/: CMakeLists.txt
example_csvs/: format_a.csv  format_b.csv  format_c.csv
plans/: extension_plan.md  todo.md
scripts/: __init__.py  bootstrap_admin.py  cleanup_password_reset_tokens.py  debug_rate_limit.py  debug_user_access.py  debug_user_access_nonadmin.py  init_db.sql  mark_placeholder_emails_verified.py  seed_dummy_data.py  stress_test.py
src/mnemo/: main.py
tests/: conftest.py  setup_env.py  test_fixtures.py  test_settings.py
tests/helpers/: fake_redis.py
tests/integration/: test_admin.py  test_auth_flow.py  test_countries.py  test_csv_import.py  test_decks_cards.py  test_memory_states.py  test_memory_states_edge_cases.py  test_password_reset.py  test_password_reset_email_template.py  test_plan.py  test_progress_deck_not_found.py  test_progress_scopes.py  test_registration.py  test_sessions.py
tests/unit/: conftest.py  test_api_key_service.py  test_api_key_service_edge_cases.py  test_auth_service.py  test_config.py  test_coverage_boost.py  test_deck_service_edge_cases.py  test_flashcard_service_edge_cases.py  test_health.py  test_id_generator.py  test_idempotency_service.py  test_import_service.py  test_import_worker.py  test_local_time.py  test_main.py  test_progress.py  (+10 more)
(+105 files in other folders)
